--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:latest
     container_name: postgres_db
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
@@ -17,7 +17,14 @@ services:
       - ./02-init.sh:/docker-entrypoint-initdb.d/02-init.sh
     networks:
       - app_network
-  
+
+    # Ajouter un healthcheck pour vérifier si PostgreSQL est prêt
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}", "-h", "localhost"]
+      interval: 10s  # Vérification toutes les 10 secondes
+      retries: 5     # Essayer 5 fois avant de considérer que la base de données est prête
+      timeout: 5s    # Temps d'attente pour chaque test de connexion
+
   node-app:
     build: .
     container_name: node_server
@@ -25,15 +32,18 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db  # Connexion au service db via le nom du service
+      - POSTGRES_PORT=5432
     ports:
-      - "3000:3000"  # Map the port for the Node.js app
+      - "3000:3000"
     volumes:
-      - .:/usr/src/app  # Mount the project files into the container
+      - .:/usr/src/app
     depends_on:
-      - db  # Ensure that the db service is started before the Node.js app
+      db:
+        condition: service_healthy  # Attendre que le service db soit healthy
     networks:
       - app_network
-    command: ["node", "server.js"]  # This will start your server when the container runs
+    command: ["node", "server.js"]
 
 volumes:
   db_data:
